# htmx-todo

./: Cargo.toml  Readme.md
src/: main.rs
templates/: base.html  tasks-form.html  tasks-list.html  tasks.html
