[package]
name = "todo-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
askama = "0.11"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.203"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
